let's try again

--- a/api/templates/api/register.html
+++ b/api/templates/api/register.html
@@ -43,6 +43,12 @@
             {{ form.profile_photo.errors }}
         </div>
 
+        <div>
+            {{form.role.label_tag}}
+            {{form.role}}
+            {{form.role.errors}}
+        </div>
+
         <button type="submit">Register</button>
     </form>
 
